tests/semantic/pass/param.c
int main(int a) {
  int d;
  d = a;
}
