tests/semantic/fail/illegal_types1.c
int ff()();             // a function returning a function returning an int
